[project]
name = "upki"
version = "0.1.0"
description = "uPKI CA instance"
authors = [
    {name = "x42en",email = "x42en@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "cryptography (>=46.0.5,<47.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "zmq (>=0.0.0,<0.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
